# dizionaut

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dizionaut/: logger.py  main.py  states.py  utils.py
src/dizionaut/handlers/: common.py  errors.py  start.py  success.py  translate.py
src/dizionaut/services/: api.py  scoring.py
tests/: test_scoring.py  test_utils.py
